change email and mobile

--- a/index.html
+++ b/index.html
@@ -389,15 +389,15 @@
           <p>Маєте питання або пропозицію ?</p>
           <a
             style="text-decoration: none"
-            href="tel:+380671486936"
+            href="tel:+380984196925"
             target="_blank"
-            >067 14 86 936</a
+            >098 419 6925</a
           ><br />
           <a
             style="text-decoration: none"
-            href="mailto:tovarniybusiness7@gmail.com"
+            href="mailto:product.business0@gmail.com"
             target="_blank"
-            >tovarniybusiness7@gmail.com</a
+            >product.business0@gmail.com</a
           >
           <p>2022. Усі права захищені</p>
         </footer>
